Final version for first pre-print

--- a/main.tex
+++ b/main.tex
@@ -101,8 +101,8 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 % Sort references by year, to make citations correct
 
 \section*{Abstract}
-% 200 words
-Looming stimuli evoke behavioral responses in most sighted animals, yet the mechanisms of looming detection in vertebrates are poorly understood. Here we hypothesize that looming detection in the optic tectum may rely on spontaneous emergence of synfire chains: groups of neurons connected to each other in the same sequence in which they are activated during a loom. We then test some specific consequences of this hypothesis. First, we use high-speed calcium imaging to reconstruct connectivity of small networks within the tectum of \textit{Xenopus} tadpoles. We report that reconstructed directed graphs are clustered and hierarchical; that their modularity increases in development, and that looming-selective cells tend to act as activation sinks within these graphs. Second, we describe spontaneous emergence of looming selectivity in a computational developmental model of the tectum, governed by synaptic and intrinsic plasticity, and driven by structured visual inputs. We show that structured inputs are critical for the emergence of selectivity; that synfire chains contribute to looming detection in the model, and that biological tectal networks follow most, but not all predictions of the model. Finally, we run sensitivity analysis, and describe which developmental rules may be most important for the emergence of looming selectivity in the brain.
+% 195 words
+Looming stimuli evoke behavioral responses in most sighted animals, yet the mechanisms of looming detection in vertebrates are poorly understood. Here we hypothesize that looming detection in the tectum may rely on spontaneous emergence of synfire chains: groups of neurons connected to each other in the same sequence in which they are activated during a loom. We then test some specific consequences of this hypothesis. First, we use high-speed calcium imaging to reconstruct connectivity of small networks within the tectum of \textit{Xenopus} tadpoles. We report that reconstructed directed graphs are clustered and hierarchical, that their modularity increases in development, and that looming-selective cells tend to act as activation sinks within these graphs. Second, we describe spontaneous emergence of looming selectivity in a computational developmental model of the tectum, governed by both synaptic and intrinsic plasticity, and driven by structured visual inputs. We show that synfire chains contribute to looming detection in the model; that structured inputs are critical for the emergence of selectivity, and that biological tectal networks follow most, but not all predictions of the model. Finally, we propose a conceptual scheme for understanding the emergence and fine-tuning of collision detection in developing aquatic animals.
 %TC:ignore 
 \bigskip
 
@@ -300,31 +300,29 @@ When synaptic competition was replaced with synaptic strength decay (Table 1, co
 
 When intrinsic plasticity was weakened (Table 1, column "No Intrinsic"; Figure 8, green lines), looming detection did not emerge (green in Figure 8A-C,F-H), and networks had simpler response structure, both in terms of PCA results (Figure 8Q), and ensemble analysis (Figure 8R). This shows that agile intrinsic plasticity is critical for learning; without it the interaction between neuronal activity and network connectivity is disrupted, as the network cannot process sensory stimuli, yet is prone to spontaneous activity.
 
-Finally, training exclusively on looming stimuli was not critical for most measurements, in terms of replicating predictions of a full model, but training on structured stimuli was. When looming stimuli (black line in Figure 8) were replaced by non-colliding visual stimuli (dashed gray line in Figure 8), most network parameters developed similarly to how they did in the base model (Table 1, column "Visual"). Stimulus encoding was similar or better; measures of looming selectivity showed similar trajectories (Figure 8A-I), except that the values of selectivity were 20-50\%, and changes in many network properties were indistinguishable (Figure 8W-Z). In contrast, when patterned stimuli were replaced with uncorrelated noise (dashed pink line in Figure 8; Table 1, column "Noise"), most measures of selectivity did not improve with time (dashed pink lines are flat in Figure 8A-B and D-I), even though network topology still changed in development (Figure 8W-Z).
+Finally, training exclusively on looming stimuli was not critical for most measurements, in terms of replicating predictions of a full model, but training on structured stimuli was. When looming stimuli (black line in Figure 8) were replaced by non-colliding visual stimuli (dashed gray line in Figure 8), most network parameters developed similarly to how they did in the base model (Table 1, column "Visual"). Stimulus encoding was similar or better; measures of looming selectivity showed similar trajectories (Figure 8A-I), except that the values of selectivity were 20-50\%, and changes in many network properties were indistinguishable (Figure 8W-Z). In contrast, when patterned stimuli were replaced with uncorrelated noise (dashed pink line in Figure 8; Table 1, column "Noise"), most measures of selectivity did not improve with time (dashed pink lines are flat in Figure 8A-B and D-I), even though network topology still changed in development (Figure 8W-Z). It suggests that looming detection should not emerge in enucleated or dark-rared aquatic animals, unless the development of their tecta is guided by retinal waves with temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. This prediction matches experimental reports from tadpoles \citep{xu2011}, but curiously seems to contradict observations in Zebrafish \citep{pietri2017emergence}.
 
 \section*{Discussion}
 
-In the first half of this study, we reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed calcium imaging recordings, and describe novel aspects of tectal network topology. We show that tectal networks become more openwork with development, approaching a scale-free statistics. We also show that looming-selective cells tend to be located in the middle of the receptive field for a looming stimulus they respond to, and that they tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells.
+In the first half of this study, we reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed calcium imaging recordings, and describe novel aspects of tectal network topology. We show that tectal networks become more openwork with development, approaching scale-free statistics, and non-random network structure. We also show that looming-selective cells tend to be located in the middle of the receptive field for a looming stimulus they respond to, and that they tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells.
 
-For the second part of this paper, we hypothesized that a simulated developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure, which would be 3) similar to that observed in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and stimulus encoding), and this increase in selectivity was resilient to changes in model assumptions. Yet these result were not truly replicated in biological experiments, as we observed no improvement in looming detection over development, and neither average selectivity, stimulus encoding, nor cell specialization improved from younger to older tadpoles. This was particularly surprising in view of a known improvement in collision avoidance in tadpoles with age \citep{dong2009}. Also, while spatiotemporally tuned synfire chains clearly emerged in thee model (Figure 8U), we could not clearly tease out their contribution to looming selectivity.
+For the second part of this paper, we hypothesized that a simulated developing network governed by the spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure, which 3) would be similar to that observed in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (both in terms of average preference, and stimulus encoding), and this increase in selectivity was resilient to changes in model assumptions. Yet model result were not truly replicated in biological experiments, as in tadpoles there was no improvement in looming detection, and neither average selectivity, stimulus encoding, nor cell specialization increased with development. This was particularly surprising in view of a known improvement in collision avoidance in tadpoles with age \citep{dong2009}. Moreover, while spatiotemporally tuned synfire chains clearly emerged in thee model (Figure 8U), we could not clearly tease out their quantitative contribution to looming selectivity.
 
-As predicted, our model networks developed non-random structure, with a scale-free degree distribution, low clustering, and high modularity. Several results related to network structure were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a decrease in bidirectional connections, and all statements related to neuronal ensembles. This match between the model and the experiment suggests that at the very least, our model captured the nature of network development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, and STDP coordinated activity within sub-networks, increasing modularity \citep{stam2010modular, litwin2014assemblies}, similar to how it was previously described for classic Hebbian plasticity \citep{damicelli2018topomod, triplett2018emergence}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous, pietri2017emergence}, but we believe this is because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This made our experiments very much unlike the case of spontaneous activity, when different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
+As predicted, our model networks developed non-random structure, with a scale-free degree distribution, low clustering, and high modularity. Several results related to network structure were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a decrease in bidirectional connections, and statements related to neuronal ensembles. This match between the model and the experiment suggests that at the very least, our model captured the nature of network development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, and STDP coordinated activity within sub-networks, increasing modularity \citep{stam2010modular, litwin2014assemblies}, similar to how it was previously described for other types of plasticity \citep{damicelli2018topomod, triplett2018emergence}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous, pietri2017emergence}, but we believe this is because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This made our experiments very much unlike the case of spontaneous activity, when different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
 
-At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons from stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum are known to be refined at these developmental stages \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even reversed late in development (Figure 8), which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether developmental stage 46 corresponds to a mid-point of network maturation, or falls on the developmental plateau. The absence of improvement in stimulus encoding in older tadpoles (Figure 2G), as well as a known difference in STDP between very young (stage 42) and older (stage 48) tadpoles \citep{richards2010stdp, tsui2010developmental}, suggest that both stages included in this study may indeed fall on the “plateau”. If true, this would mean that the known improvement in collision avoidance between stage 46 and stage 49 tadpoles \citep{dong2009} may be largely due to maturation of sensorimotor projections from the tectum to the hindbrain, which we did not assess in this study.
+At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons from stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum are known to be refined at these developmental stages \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even reversed late in development (Figure 8), which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether developmental stage 46 corresponds to a mid-point of network maturation, or falls on the developmental plateau. The absence of improvement in stimulus encoding in older tadpoles (Figure 2G), as well as a known difference in STDP between very young (stage 42) and older (stage 48) tadpoles \citep{richards2010stdp, tsui2010developmental}, suggest that both stages included in this study may indeed fall on the “plateau”. If true, this would mean that the known improvement in collision avoidance between stage 46 and stage 49 tadpoles \citep{dong2009} is largely due to maturation of sensorimotor projections from the tectum to the hindbrain that we did not assess in this study.
 
 Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With, respectively, 14 and 16 networks reconstructed for each developmental stage, we could only hope to detect large changes in network parameters (Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power). Moreover, based on available imaging studies, we can estimate that at stage 49, one half of a tadpole tectum contains about 10,000 neurons, as it measures about 40 cells across \citep{hiramoto2009}, and is packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network, and 0.01\% of all connections. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering our test power.
 
-Third, one can question the validity of our connectivity reconstructions, as we did not have an opportunity to compare these reconstructions to a "ground truth" connectivity (but see \citealt{xu2011}). The best way to address this concern would be to run a set of control experiment, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from calcium imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria of a successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks, compared to rewired networks. Also, we were comforted by a good replication of tectal response shapes (compared to \citealt{khakhalin2014}), a good internal replication of edge detection between stimuli types, and an observation of retinotopy during responses to looming stimuli.
+Third, one can question the validity of our connectivity reconstructions, as we did not have an opportunity to compare these reconstructions to a "ground truth" connectivity (but see \citealt{xu2011}). The best way to address this concern would be to run a set of control experiment, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from calcium imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria of a successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements of reconstructed networks, compared to rewired networks (Figure 5). Also, we were comforted by a good replication of tectal response shapes (Figure 2A,B, compared to \citealt{khakhalin2014}), a good internal replication of edge detection between stimuli types, and an observation of retinotopy during responses to looming stimuli (Figure 3A,B).
 
 %Notably, the fact that we recorded network activity exclusively in response to shared inputs does not pose a big concern for this type of analysis, as during adjusted transfer entropy calculations we ignored all patterns that were shared across trials. This means that, if anything, we were at risk of not detecting strongest connections within the network if they were robust enough to be activated in each and every trial, rather than mistaking shared synaptic drive for within-network connectivity.
 
-Finally, the fourth way to explain a relatively poor fit between our model and imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are after all different from that in the model. In our simulations, looming selectivity was mediated by the emergent synfire chains \citep{cohen2002synreview, zheng2014synfire} that were shaped by the structured sensory activation \citep{vislay2006rf, clopath2010stdpcoding}, and thus encoded activation patterns typical for looming stimuli \citep{pratt2008recurrent, richards2010stdp}. Later, when looming stimuli were presented to a model, they "resonated" with matching synfire chains, causing them to respond strongly. It may be that in the biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014, jang2016}, dynamic inactivation of neurons \citep{fotowat2011multiplexing}, or some other non-linear effects \citep{baginskas2009recurrent}. Two notable discrepancies between the model and the experiments are the position of selective cells within the network (central in tadpoles, peripheral in the model), and the difference in centrality measurements related to local signal integration (slightly higher in-degree and Katz rank in biological experiments, but no similar effect in the base model). We however don't find these discrepancies too problematic: the difference in spatial placement of looming-selective cells may be due to explicit spatial assignment of output neurons in biological tecta that obviously was not included in our model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in the model. Indeed, in simulations, we effectively forced every neuron to have outputs \textit{within} the tectal network, which led to the development of cycles, while in a real tectum selective cells may lack local intratectal outputs, projecting only to other brain regions. This hypothesis is indirectly supported by high Katz centrality of looming-selective cells in simulations without synaptic competition (Figure 8N,O, brown lines).
+Finally, the fourth way to explain a relatively poor fit between our model and imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are after all different from that in the model. In our simulations, looming selectivity was mediated by the emergent synfire chains \citep{cohen2002synreview, zheng2014synfire} that were shaped by the structured sensory activation \citep{vislay2006rf, clopath2010stdpcoding}, and thus encoded activation patterns typical for looming stimuli \citep{pratt2008recurrent, richards2010stdp}. When looming stimuli were presented to the model, they "resonated" with matching synfire chains, causing them to respond strongly. It may be that in the biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014, jang2016}, dynamic inactivation of neurons \citep{fotowat2011multiplexing}, or some other non-linear effects \citep{baginskas2009recurrent}. Two biggest discrepancies between the model and the experiments were the position of selective cells within the network (central in tadpoles, peripheral in the model; Figure 3C vs. Figure 8J), and the difference in centrality measurements related to local signal integration (slightly higher in-degree and Katz rank in biological experiments, but no similar effect in the base model; Figure 6A-C vs. Figure 8N,O). We don't find these discrepancies too problematic however: the difference in spatial placement of looming-selective cells may be due to the explicit, developmentally controlled arrangement of output neurons in biological tecta that was not included in our model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in the model. Indeed, in simulations, we effectively forced most neurons to have outputs \textit{within} the tectal network, which led to the development of cycles, while in a real tectum selective cells may lack local intratectal outputs, projecting only to other brain regions. This hypothesis is supported by very high Katz centrality of looming-selective cells in simulations without synaptic competition (Figure 8N,O, red lines). We therefore believe that, with all limitations of both the model and the experimental data taken into account, they were largely in agreement with each other. 
 
-Despite an incomplete match with the data, our model yielded interesting general predictions. The sensitivity analysis showed that of all modeling assumptions, two most important ones are the presence of fast intrinsic plasticity, and the exposure to patterned stimulation. The model developed looming selectivity even if synaptic competition was disrupted, and seemed to fare better with simple Hebbian plasticity, compared to STDP, but it failed if intrinsic plasticity was slow compared to synaptic plasticity, or if sensory inputs were kept random. At the same time, it was not critical for the model to be trained on looming stimuli: stimulus encoding was similarly high after stimulation with a mix of randomized translating, receding, and oblique looming stimuli, suggesting that it is edge continuity that mattered most. This also means that conceivably, proper tectal organization may emerge from responses to retinal waves alone, provided that their temporal statistics is similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. %Our model also predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but curiously seems to contradict experimental observations in Zebrafish \citep{pietri2017emergence}.
+At the same time, to actually find a subset of tectal outputs that can be used as a functional looming detector, as we did while estimating stimulus encoding (Figure 8E), a developing brain would need access to a learning signal. As a working hypothesis, we propose that in aquatic vertebrates this learning signal may come from both dimming receptors in the retina \citep{ishikane2005, baranauskas2012}, and lateral line receptors in the body \citep{pratt2009multisens, felch2016, truszkowski2017}. These inputs can then facilitate plasticity in tectal projections to the reticulospinal neurons in the hindbrain, strengthening inputs from a subset of tectal cells that were most active immediately before a collision. Moreover, during random spatial encounters, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each individual collision, theoretically allowing animals to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{frost2004review, helmbrecht2018topography}. This type of learning could lead to the development of spatially nuanced escape responses that are described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}. Based on this hypothesis, we predict that if tadpoles are raised individually in empty arenas (devoid of objects to collide with), they should have normal vision and dark-startles, but they would not be able to perform proper collision avoidance.
 
-At the same time, to actually use a subset of tectal outputs as a functional looming detector, as we did while estimating stimulus encoding (Figure 8E), a developing brain would need access to a learning signal. As a working hypothesis, we propose that in aquatic vertebrates this learning signal may come from both dimming receptors in the retina \citep{ishikane2005, baranauskas2012}, and lateral line receptors in the body \citep{pratt2009multisens, felch2016, truszkowski2017}. These inputs can then facilitate plasticity in tectal projections to reticulospinal neurons in the hindbrain, strengthening inputs from a subset of tectal cells that were most active immediately before a collision. Moreover, during random spatial encounters, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each individual collision, theoretically allowing animals to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{frost2004review, helmbrecht2018topography}. This type of learning could lead to the development of spatially nuanced escape responses that are described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}. Based on this hypothesis, we predict that if tadpoles are raised individually in empty arenas (devoid of objects to collide with), they should have normal vision and dark-startles, but they would not be able to perform proper collision avoidance.
-
-To sum up, we show that a combination of simple developmental rules with patterned sensory stimulation can quickly shape a random network into a structured system, able to support collision detection. We show that several predictions from our model are replicated in biological experiments, although we found no improvement in looming detection between stage 46 and 49 tadpoles. We demonstrate that functional connectivity of tectal networks can be reconstructed from fast calcium imaging experiments, and that the structure of these networks may support collision detection in small aquatic animals.
+To sum up, we show that a combination of simple developmental rules with patterned sensory stimulation can quickly shape a random network into a structured system, able to support collision detection. We show that several predictions from our model are replicated in biological experiments, although we found no improvement in looming detection between stage 46 and 49 tadpoles. We demonstrate that functional connectivity of tectal networks can be reconstructed from fast calcium imaging experiments, and that the structure of these networks can support collision detection in small aquatic animals.
 
 \section*{Methods}
 
